--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,10 @@ stages:
   jobs: 
   - job: 'Build'
     displayName: 'Build job'
-    pool: Default
+    pool:
+      vmImage: 'ubuntu-20.04'
+      demands:
+      - npm
 
     variables:
       wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
@@ -66,12 +69,14 @@ stages:
 
     - publish: '$(Build.ArtifactStagingDirectory)'
       artifact: drop
+
 - stage: 'Deploy'
   displayName: 'Deploy the web application'
   dependsOn: Build
   jobs:
   - deployment: Deploy
-    pool: Default
+    pool:
+      vmImage: 'ubuntu-20.04'
     environment: dev
     variables:
     - group: Release
