--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,7 +85,7 @@ stages:
         deploy:
           steps:
           - download: current
-            artifact: drop
+            artifact: drop1
           - task: AzureWebApp@1
             displayName: 'Azure App Service Deploy: website'
             inputs:
